DevOps/CI/manifest-main/nexus/nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  namespace: kube-ops
  labels:
    app: nexus3
spec:
  selector:
    app: nexus3
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8081
      targetPort: 8081
